[tool.poetry]
name = "llming-hub"
version = "0.1.0"
description = "Generic, reusable hub landing page for NiceGUI applications"
authors = ["Michael Ikemann <michael.ikemann@gmail.com>"]
license = "BUSL-1.1"
packages = [{include = "llming_hub"}]

[tool.poetry.dependencies]
python = ">=3.14,<4"
fastapi = "*"
starlette = "*"
llming-com = {path = "../llming-com", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
